test/error/error8.pas
{括号不匹配}
program prog;
var x, y : integer;
begin
  write('hello the world '));
end.
